# nonebot_plugin_BiliRequestAll

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: urls.json
nonebot_plugin_BiliRequestAll/: __init__.py  api.py  config.py  func.py  log.py
nonebot_plugin_BiliRequestAll/controller/: __init__.py  api.py  r_info.py  r_request.py  r_setting.py
nonebot_plugin_BiliRequestAll/groupSwitcher/: switcher.json
nonebot_plugin_BiliRequestAll/utils/: __init__.py  f_config.py
pypi-build/Shadow403.egg-info/: PKG-INFO  requires.txt
pypi-build/nonebot_plugin_BiliRequestAll.egg-info/: PKG-INFO  SOURCES.txt
pypi-bulid/Shadow403.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
