[tool.poetry]
name = "nonebot-plugin-BiliRequestAll"
version = "0.3.2"
description = "以B站UID审核入群 😎"
authors = ["Shadow403 <admin@shadow403.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10.0"
httpx = ">=0.27.0"
nonebot2 = ">=2.2.0"
nonebot-adapter-onebot = ">=2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
